--- a/mysql-noprovision/values.yaml
+++ b/mysql-noprovision/values.yaml
@@ -68,8 +68,8 @@ extraInitContainers: |
 
 ## Node selector
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
-nodeSelector:
-  kubernetes.io/hostname: k8s-node-2
+nodeSelector: {}
+  # kubernetes.io/hostname: k8s-node-2
 
 ## Affinity
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
