--- a/mysql-noprovision/values.yaml
+++ b/mysql-noprovision/values.yaml
@@ -68,8 +68,8 @@ extraInitContainers: |
 
 ## Node selector
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
-nodeSelector:
-  nodePool: cluster
+nodeSelector: {}
+  # nodePool: cluster
   # kubernetes.io/hostname: k8s-node-2
 
 ## Affinity
