--- a/n8n/app/values.yaml
+++ b/n8n/app/values.yaml
@@ -1,11 +1,22 @@
 # Default helm values for n8n.
 # Default values within the n8n application can be found under https://github.com/n8n-io/n8n/blob/master/packages/cli/config/index.ts
 n8n:
-  encryption_key: # n8n creates a random encryption key automatically on the first launch and saves it in the ~/.n8n folder. That key is used to encrypt the credentials before they get saved to the database.
+  encryption_key: Dev@123! # n8n creates a random encryption key automatically on the first launch and saves it in the ~/.n8n folder. That key is used to encrypt the credentials before they get saved to the database.
+  # selectorLabels: n8n-chart
+  # fullname: n8n
+  # labels: n8n-chart
 defaults:
 
 config: # Dict with all n8n json config options
+  database:
+    type: mysqldb
+    mysqldb:
+      host: 10.233.114.20
+      port: 3306
 secret: # Dict with all n8n json config options, unlike config the values here will end up in a secret.
+  database:
+    mysqldb:
+      password: password
 
 # Typical Example of a config in combination with a secret.
 # config:
@@ -19,6 +30,14 @@ secret: # Dict with all n8n json config options, unlike config the values here w
 #        password: 'big secret'
 
 ## ALL possible n8n Values
+
+database:
+  type: mysqldb
+  mysqldb:
+    host: 10.233.114.20
+    password: password
+generic:
+  timezone: Asia/Bangkok
 
 #
 #database:
@@ -106,8 +125,8 @@ extraEnv: {}
 persistence:
   ## If true, use a Persistent Volume Claim, If false, use emptyDir
   ##
-  enabled: false
-  type: emptyDir # what type volume, possible options are [existing, emptyDir, dynamic] dynamic for Dynamic Volume Provisioning, existing for using an existing Claim
+  enabled: true
+  type: existing # what type volume, possible options are [existing, emptyDir, dynamic] dynamic for Dynamic Volume Provisioning, existing for using an existing Claim
   ## Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -115,7 +134,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  # storageClass: "-"
+  storageClass: local-storage
   ## PVC annotations
   ##
   annotations:
@@ -171,35 +190,34 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  annotations: {}
-  # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: n8n.local
+      paths: ["/"]
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
 resources:
-  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-#   cpu: 100m
-#   memory: 128Mi
+    limits:
+      cpu: 2
+      memory: 1Gi
+    requests:
+      cpu: 2
+      memory: 1Gi
 
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 4
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
