--- a/n8n/app/values.yaml
+++ b/n8n/app/values.yaml
@@ -195,7 +195,7 @@ ingress:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
   hosts:
-    - host: n8n.local
+    - host: n8n.app.local
       paths: ["/"]
   tls: []
   #  - secretName: chart-example-tls
