--- a/manual/kube-webinar-demo/01-pod.yaml
+++ b/manual/kube-webinar-demo/01-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox
+  name: linux
   namespace: webinar-demo
 spec:
   containers:
@@ -13,10 +13,7 @@ spec:
       resources:
         limits:
           memory: "10Mi"
-          cpu: "1"
-      args:
-      - -cpus
-      - "2"
+          cpu: "100m"
     - name: alpine
       image: alpine
       command:
@@ -25,7 +22,4 @@ spec:
       resources:
         limits:
           memory: "10Mi"
-          cpu: "1"
-      args:
-      - -cpus
-      - "2"
+          cpu: "100m"
