feat: update mysql manifest

--- a/mysql/mysql-noprovision/values.yaml
+++ b/mysql/mysql-noprovision/values.yaml
@@ -187,10 +187,10 @@ service:
   annotations: {}
   ## Specify a service type
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types
-  # type: ClusterIP
-  type: NodePort
+  type: ClusterIP
+  # type: NodePort
   port: 3306
-  nodePort: 30573
+  # nodePort: 30573
   # loadBalancerIP:
 
 ## Pods Service Account
