--- a/mysql/mysql-production/values.yaml
+++ b/mysql/mysql-production/values.yaml
@@ -16,10 +16,13 @@ testFramework:
   image: "dduportal/bats"
   tag: "0.4.0"
 
+nameOverride: mysql
+# fullnameOverride: mysql
+
 ## Specify password for root user
 ##
 ## Default: random 10 character string
-# mysqlRootPassword: testing
+mysqlRootPassword: password
 
 ## Create a database user
 ##
@@ -29,7 +32,7 @@ testFramework:
 
 ## Allow unauthenticated access, uncomment to enable
 ##
-# mysqlAllowEmptyPassword: true
+mysqlAllowEmptyPassword: true
 
 ## Create a database
 ##
@@ -103,10 +106,11 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  # storageClass: "-"
+  storageClass: longhorn
   accessMode: ReadWriteOnce
-  size: 8Gi
+  size: 10Gi
   annotations: {}
+  mountPath: /home/sql/mysql
 
 ## Use an alternate scheduler, e.g. "stork".
 ## ref: https://kubernetes.io/docs/tasks/administer-cluster/configure-multiple-schedulers/
@@ -131,7 +135,29 @@ resources:
 configurationFilesPath: /etc/mysql/conf.d/
 
 # Custom mysql configuration files used to override default mysql settings
-configurationFiles: {}
+
+# Custom mysql configuration files used to override default mysql settings
+configurationFiles:
+  mysql.cnf: |-
+    [mysqld]
+    skip-host-cache
+    skip-name-resolve
+    key_buffer_size     = 16M
+    max_allowed_packet  = 1G
+    thread_stack        = 192K
+    thread_cache_size   = 8
+    query_cache_limit   = 1M
+    query_cache_size    = 16M
+    interactive_timeout = 800
+    wait_timeout        = 800
+    max_connections     = 10001
+    connect_timeout     = 300
+    net_read_timeout    = 150
+  mysqldump.cnf: |-
+    [mysqldump]
+    quick
+    quote-names
+    max_allowed_packet  = 1G
 #  mysql.cnf: |-
 #    [mysqld]
 #    skip-name-resolve
@@ -173,6 +199,7 @@ service:
   ## Specify a service type
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types
   type: ClusterIP
+  # type: LoadBalancer
   port: 3306
   # nodePort: 32000
   # loadBalancerIP:
