--- a/mysql/mysql-production/templates/svc.yaml
+++ b/mysql/mysql-production/templates/svc.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "mysql.fullname" . }}
+  name: {{ .Values.nameOverride }}-svc
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "mysql.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+    kind: mysql-db
+
   annotations:
 {{- if .Values.service.annotations }}
 {{ toYaml .Values.service.annotations | indent 4 }}
