--- a/n8n/app/values.yaml
+++ b/n8n/app/values.yaml
@@ -7,11 +7,13 @@ n8n:
   # labels: n8n-chart
 defaults:
 
+namespace: play
+
 config: # Dict with all n8n json config options
   database:
     type: mysqldb
     mysqldb:
-      host: 10.233.114.20
+      host: 10.152.183.193
       port: 3306
 secret: # Dict with all n8n json config options, unlike config the values here will end up in a secret.
   database:
@@ -34,7 +36,7 @@ secret: # Dict with all n8n json config options, unlike config the values here w
 database:
   type: mysqldb
   mysqldb:
-    host: 10.233.114.20
+    host: 10.152.183.193
     password: password
 generic:
   timezone: Asia/Bangkok
@@ -192,15 +194,18 @@ service:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: "letsencrypt-thaiopenstack"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: n8n.app.local
+    # - host: n8n.app.local
+    - host: n8n.play.thaiopenstack.com
       paths: ["/"]
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+   - secretName: tls-secret
+     hosts:
+       - n8n.play.thaiopenstack.com
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
